# agentic-chat

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  Makefile  README.md  ai-tasks.yaml  pyproject.toml
outputs/diagrams/: code_walkthrough_arch.md  e2e_sequence.md  runner_tasks.md  study_guide_concept.md
outputs/documentation/: mcp-setup.md
outputs/documents/: code_walkthrough.md  study_guide.md
scripts/: clean_transcripts.py  download_transcripts.py
src/agentic_chat/: __init__.py
transcripts/: part1_final.md  part2_final.md  part3_final.md  part4_final.md
